# szveikko

./: .gitignore
random/ex01/: CMakeLists.txt  main.cpp
random/fileio/: CMakeLists.txt  main.cpp
random/untitled1/: main.c
test/: q&A.txt
test/mostCommonCharacter/: CMakeLists.txt  main.cpp
test/pirates/: CMakeLists.txt  Ship.cpp  Ship.h  main.cpp  pirates.cpp  pirates.h
test/symmetricMatrix/: CMakeLists.txt  main.cpp
week-00/myfirstwebsite/: index.html  styles.css
week-01/day03/: CMakeLists.txt  ex4-6.cpp  ex7.cpp
week-01/day04/: CMakeLists.txt  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex06.cpp  ex07.cpp  ex08.cpp  ex09.cpp  ex10.cpp  ex11.cpp  ex12.cpp  main.cpp
week-01/day05/: CMakeLists.txt  main.cpp
week-01/day05/MultiBoard/: CMakeLists.txt  main.cpp
week-01/day05/assign a/: CMakeLists.txt  main.cpp
week-01/day05/colors/: main.cpp
week-02/weekend/: main.cpp
week-04/day-02/: CMakeLists.txt  cohort.cpp  cohort.h  main.cpp  mentor.cpp  mentor.h  person.cpp  person.h  sponsor.cpp  sponsor.h  student.cpp  student.h
week-04/day-02/Garden/: CMakeLists.txt  flower.cpp  flower.h  garden.cpp  garden.h  main.cpp  tree.cpp  tree.h
week-04/day-03/ModelDevices/: CMakeLists.txt  copier.cpp  copier.h  main.cpp  printer.cpp  printer.h  printer2D.cpp  printer2D.h  printer3D.cpp  printer3D.h  scanner.cpp  scanner.h
week-04/day-03/instruments/: CMakeLists.txt  bassGuitar.cpp  bassGuitar.h  electricGuitar.cpp  electricGuitar.h  instrument.cpp  instrument.h  main.cpp  stringedInstrument.cpp  stringedInstrument.h  violin.cpp  violin.h
week-04/day-05/wireless_/: CMakeLists.txt  device.cpp  device.h  main.cpp  networkdevice.cpp  networkdevice.h  usbdevice.cpp  usbdevice.h  wirelessadapter.cpp  wirelessadapter.h
week-05/day03/restaurant/: CMakeLists.txt  chef.cpp  chef.h  employees.cpp  employees.h  manager.cpp  manager.h  restaurant.cpp  restaurant.h  waiter.cpp  waiter.h
(+300 files in other folders)
